# xllib

./: .gitignore  C++编码规范  CMakeLists.txt  Coding convention  CodingConvention.md  README.md  build.sh  modern C++编码规范.md
base/: BlockQueue.h  Condition.h  CountDown.h  Factory.cpp  Mutex.h  noncopyable.h
comm/: BlockQueue.h  BlockingQueue.cpp  BlockingQueue.h  BlockingQueue.hpp  CMakeLists.txt  CountDown.cpp  CountDown.h  CurrentThread.cpp  CurrentThread.h  Factory.cpp  File.cpp  File.h  LogAsync.cpp  LogAsync.h  LogFile.cpp  LogFile.h  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h  Observer_safe.cpp  ProcessInfo.cpp  ProcessInfo.h  TaskQueue.h  ThreadPool.cpp  ThreadPool.h  Timestamp.cpp  Timestamp.h  noncopyable.h  stringHelper.cpp  stringHelper.h  xldefine.h
demo/: AtomInteger.h  AtomIntegerDemo.cpp  BlockQueueDemo.cpp  CMakeLists.txt  Condition.h  CopyOnWrite.cpp  CountDownDemo.cpp  Factory.cpp  FileDemo.cpp  LogFileDemo.cpp  LoggerDemo.cpp  MultiThreadReadWrite.cc  Mutex.h  MutexDemo.cpp  Observer_safe.cpp  ProducerConsumer.cpp  Singleton.h  SingletonDemo.cpp  TaskQueue.h  Thread.h  ThreadDemo.cpp  ThreadPoolDemo.cpp  build.sh  epolldemo.cpp  stringHelperDemo.cpp  xldefineDemo.cpp
plat/: AtomInteger.h  Condition.h  Mutex.h  Singleton.h  Thread.h  xldefine.h
test/: CMakeLists.txt  assertTest.cpp  build.sh  cfun.c  coredump.cpp  deadlock.cpp  funcbind.cpp  mianshi.cpp  movetest.cpp  nullptr.cpp  segmenfault.cpp  singleThread.cpp  smartPtr.cpp  snippet.cpp  stdNotSafe.cpp  stringNotSafe.cpp
